[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldw-voice-assistant"
version = "0.1.0"
description = "Voice Assistant SDK for tldw_server - WebSocket client with audio support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "tldw_server", email = "noreply@example.com" }
]
keywords = [
    "voice-assistant",
    "speech-to-text",
    "text-to-speech",
    "websocket",
    "tldw"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=11.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4",
    "numpy>=1.20",
]
wakeword = [
    "pvporcupine>=2.0",
]
openwakeword = [
    "openwakeword>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/rmusser01/tldw_server"
Documentation = "https://github.com/rmusser01/tldw_server/tree/main/sdks/python"
Repository = "https://github.com/rmusser01/tldw_server"

[tool.hatch.build.targets.wheel]
packages = ["tldw_voice_assistant"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
